unpackaged/main/default/objects/TalxRequestLogging__c/TalxRequestLogging__c.object-meta.xml
<CustomObject>
    <description>Object created temporarily to log Talx requests to measure talx calling</description>
    <label>TalxRequestLogging</label>
    <nameField>
        <label>TalxRequestLogging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TalxRequestLoggings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>