unpackaged/main/default/objects/TalxRequestLogging__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <length>30</length>
    <type>Text</type>
</CustomField>