unpackaged/main/default/objects/TalxRequestLogging__c/fields/requestBody__c.field-meta.xml
<CustomField>
    <fullName>requestBody__c</fullName>
    <description>requestBody</description>
    <inlineHelpText>requestBody</inlineHelpText>
    <label>requestBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>